# redloader

./: Cargo.toml
src/: lib.rs
src/evasion/: mod.rs
src/evasion/syscalls/: direct.rs  hallos_gate.rs  hells_gate.rs  indirect.rs  mod.rs
src/utils/: crc32.rs  fast_crc32.rs  mod.rs  windows.rs
tests/: evasion.rs
