[package]
name = "redloader"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
windows = { version = "0.61.3", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_System_Diagnostics", "Win32_System_Kernel", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation", "Win32_System_LibraryLoader", "Win32_System_Memory"] }
windows-sys = "0.60.2"

[features]
default = ["evasion"]
evasion = []
